--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,51 +1,37 @@
-name: Publish to PyPI
+name: Build
 
 on:
-    release:
-        types: [published]
+  push:
 
 permissions:
-    contents: write
-    id-token: write
+  contents: write
+  id-token: write
 
 jobs:
-    build:
-        runs-on: ubuntu-latest
-        steps:
-            -   uses: actions/checkout@v4
-            -   uses: actions/setup-python@v5
-                with:
-                    python-version: 3.12
-            -   name: Install dependencies
-                env:
-                    PIP_CONSTRAINT: .github/workflows/constraints.txt
-                run: |
-                    pipx install hatch
-            -   name: Build
-                run: |
-                    hatch build
-            -   uses: actions/upload-artifact@v3
-                with:
-                    name: dist
-                    path: dist
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: hynek/build-and-inspect-python-package@v1
 
-    upload:
-        runs-on: ubuntu-latest
-        needs: build
-        environment: publish
-        steps:
-            -   uses: actions/checkout@v4
-            -   uses: actions/download-artifact@v3
-                with:
-                    name: dist
-                    path: dist
-            -   name: Upload wheel to release
-                uses: svenstaro/upload-release-action@v2
-                with:
-                    file: dist/*.whl
-                    tag: ${{ github.ref }}
-                    overwrite: true
-                    file_glob: true
+  publish:
+    runs-on: ubuntu-latest
+    needs: build
+    environment: publish
+    if: startsWith(github.ref, 'refs/tags/')
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/download-artifact@v3
+        with:
+          name: Packages
+          path: dist
+      - name: Upload wheel to release
+        uses: svenstaro/upload-release-action@v2
+        with:
+          file: dist/*.whl
+          tag: ${{ github.ref }}
+          overwrite: true
+          file_glob: true
 
-            -   name: Publish
-                uses: pypa/gh-action-pypi-publish@v1.8.11
+      - name: Publish
+        uses: pypa/gh-action-pypi-publish@v1.8.11
