--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -118,7 +118,7 @@ jobs:
                 hatch run cov
             - uses: actions/upload-artifact@v4
               with:
-                name: coverage-data
+                name: coverage-data-${{ matrix.os }}-py${{ matrix.python-version }}-sqlalchemy_${{ matrix.sqlalchemy-version }}
                 path: ".coverage.*"
 
     coverage:
@@ -139,7 +139,8 @@ jobs:
                 pipx install hatch
             - uses: actions/download-artifact@v4
               with:
-                name: coverage-data
+                pattern: coverage-data-*
+                merge-multiple: true
             - name: Combine coverage data
               run: |
                 hatch run report
