--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -56,6 +56,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
+        id: setup-python
         with:
           cache: pip
           python-version: "3.12"
@@ -63,7 +64,7 @@ jobs:
         env:
           PIP_CONSTRAINT: .github/workflows/constraints.txt
         run: |
-          pipx install hatch
+          pipx install --python '${{ steps.setup-python.outputs.python-path }}' hatch
       - name: Run typing
         run: |
           hatch run typing:check
@@ -119,6 +120,8 @@ jobs:
         run: |
           pipx install hatch
       - name: Run tests
+        env:
+          HATCH_ENV: "all.py${{ matrix.python-version }}-sqlalchemy_${{ matrix.sqlalchemy-version }}"
         run: |
           hatch run cov
       - uses: actions/upload-artifact@v4
@@ -135,13 +138,14 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
+        id: setup-python
         with:
           python-version: "3.12"
       - name: Install dependencies
         env:
           PIP_CONSTRAINT: .github/workflows/constraints.txt
         run: |
-          pipx install hatch
+          pipx install --python '${{ steps.setup-python.outputs.python-path }}' hatch
       - uses: actions/download-artifact@v4
         with:
           pattern: coverage-data-*
