ci: Qualify constraints file with workspace directory

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -41,7 +41,7 @@ jobs:
           python-version: "3.12"
       - name: Install dependencies
         env:
-          PIP_CONSTRAINT: .github/workflows/constraints.txt
+          PIP_CONSTRAINT: ${{ github.workspace }}/.github/workflows/constraints.txt
         run: |
           pipx install hatch
       - name: Run lint
@@ -62,7 +62,7 @@ jobs:
           python-version: "3.12"
       - name: Install dependencies
         env:
-          PIP_CONSTRAINT: .github/workflows/constraints.txt
+          PIP_CONSTRAINT: ${{ github.workspace }}/.github/workflows/constraints.txt
         run: |
           pipx install --python '${{ steps.setup-python.outputs.python-path }}' hatch
       - name: Run typing
@@ -116,7 +116,7 @@ jobs:
 
       - name: Install dependencies
         env:
-          PIP_CONSTRAINT: .github/workflows/constraints.txt
+          PIP_CONSTRAINT: ${{ github.workspace }}/.github/workflows/constraints.txt
         run: |
           pipx install hatch
       - name: Run tests
@@ -143,7 +143,7 @@ jobs:
           python-version: "3.12"
       - name: Install dependencies
         env:
-          PIP_CONSTRAINT: .github/workflows/constraints.txt
+          PIP_CONSTRAINT: ${{ github.workspace }}/.github/workflows/constraints.txt
         run: |
           pipx install --python '${{ steps.setup-python.outputs.python-path }}' hatch
       - uses: actions/download-artifact@v4
