--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ classifiers = [
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
+  "Programming Language :: Python :: 3.13",
   "Programming Language :: Python :: Implementation :: CPython",
   "Programming Language :: SQL",
   "Topic :: Database",
@@ -47,7 +48,8 @@ dynamic = [
 ]
 dependencies = [
   "sqlalchemy>=1.4",
-  "sqlean-py>=0.21.5.1",
+  "sqlean-py>=0.21.5.1,<3.47; python_version<'3.9'",
+  "sqlean-py>=0.21.5.1; python_version>='3.9'",
 ]
 optional-dependencies.coverage = [
   "coverage[toml]>=7.4.2",
@@ -77,9 +79,12 @@ features = [
   "testing",
 ]
 matrix-name-format = "{variable}_{value}"
+
 [tool.hatch.envs.default.env-vars]
 COVERAGE_CORE = "sysmon"
+PIP_ONLY_BINARY = "1"
 SQLALCHEMY_WARN_20 = "1"
+
 [tool.hatch.envs.default.overrides]
 env.GITHUB_ACTIONS.dev-mode = { value = false, if = [
   "true",
